# ClamGTK

./: CHANGELOG.md  CMakeLists.txt  Makefile  PKGBUILD_LINUX  README.md  clamGTK_make_deb.sh  fonction.c  fonction.h  gui.c  gui.h  main.c  main.h  resource.h  stack.c  stack.h  strtool.c  strtool.h  tool.c
DATA/: clam_gtk_update_script.sh  clamgtk.desktop  clamgtk.nemo_action
src/: common.h  defs.h  main.c  structs.h
src/stack/: stack.c  stack.h
src/ui/: gui.c  gui.h
src/utils/: fonction.c  fonction.h  strtool.c  strtool.h  tool.c  tool.h
tool/: clamgtk_update  clamgtk_update.c
