CMAKE_MINIMUM_REQUIRED(VERSION 3.7)

PROJECT("ClamGTK")

IF(UNIX)
    # VARIABLE #
    SET(CMAKE_INSTALL_PREFIX "/usr")
    SET(DIR_APPLICATIONS    "share/applications")
    SET(DIR_DATA            "share/ClamGTK")
    SET(DIR_BIN             "bin")

    # DEB #
    SET(CPACK_GENERATOR "DEB")
    SET(CPACK_PACKAGE_NAME ${PROJECT_NAME})
    SET(CPACK_PACKAGE_VERSION "1.0")
    SET(CPACK_PACKAGE_CONTACT "bubi.gaudrioles@hotmail.com")
    SET(CPACK_DEBIAN_PACKAGE_DESCRIPTION "Interface Graphique pour ClamAV")
    SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Bubi GAUDRIOLES")
    SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libgtk-3-0")
    INCLUDE(CPack)
    
    # BUILD #
    SET(CMAKE_C_FLAGS  "-Wall -Werror -pedantic-errors -O3")
    INCLUDE(FindPkgConfig)
    PKG_SEARCH_MODULE(GTK3 REQUIRED gtk+-3.0)
    ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})

    INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
    LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})

    ADD_EXECUTABLE(${PROJECT_NAME} main.c gui.c fonction.c)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GTK3_LIBRARIES})

    ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy  ${CMAKE_SOURCE_DIR}/PKGBUILD_LINUX ${CMAKE_CURRENT_BINARY_DIR}/PKGBUILD)

    # INSTALL #
    INSTALL(FILES "DATA/clamav.png" DESTINATION ${DIR_DATA})
    INSTALL(FILES "DATA/file.png"   DESTINATION ${DIR_DATA})
    INSTALL(FILES "DATA/search.png" DESTINATION ${DIR_DATA})
    INSTALL(FILES "DATA/clam_gtk_update_script.sh"  DESTINATION ${DIR_DATA})
    INSTALL(FILES "DATA/folder.png" DESTINATION ${DIR_DATA})
    INSTALL(FILES "DATA/update.png" DESTINATION ${DIR_DATA})
    INSTALL(FILES "DATA/clamgtk.desktop"    DESTINATION ${DIR_APPLICATIONS})
    INSTALL(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME} DESTINATION ${DIR_BIN} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
ELSE()
    MESSAGE(FATAL_ERROR "Platforme non pris en charge\n")
ENDIF()